# notion-marker

./: README.md  main.py  notion.py  pyproject.toml  tmdb.py
.github/workflows/: update-databases.yml
