[tool.poetry]
name = "marker"
version = "0.1.0"
description = ""
authors = ["niyoh <zhrh120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tmdbv3api = "^1.7.7"
notion-client = "^2.0.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
pycountry = "^22.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
